--- a/model/config.yaml
+++ b/model/config.yaml
@@ -12,11 +12,11 @@ num_classes: 2
 img_size: 224
 min_val_loss: 10000
 
+#original
 # model:
 #   backbone: convnext_tiny
 #   embedder: swin_tiny_patch4_window7_224
 #   latent_dims: 12544
-#   grn: True
 
 # batch_size: 32
 # epoch: 1
