--- a/model/config.yaml
+++ b/model/config.yaml
@@ -1,27 +1,27 @@
-model:
-  backbone: convnextv2_base
-  embedder: vit_base_patch16_224   
-  latent_dims: 12544
-  grn: True
-
-batch_size: 8
-epoch: 1
-learning_rate: 0.0001
-weight_decay: 0.0001
-num_classes: 2
-img_size: 224
-min_val_loss: 10000
-
-#original
 # model:
-#   backbone: convnext_tiny
-#   embedder: swin_tiny_patch4_window7_224
+#   backbone: convnextv2_base
+#   embedder: vit_base_patch16_224   
 #   latent_dims: 12544
+#   grn: True
 
-# batch_size: 32
+# batch_size: 8
 # epoch: 1
 # learning_rate: 0.0001
 # weight_decay: 0.0001
 # num_classes: 2
 # img_size: 224
 # min_val_loss: 10000
+
+#original
+model:
+  backbone: convnext_tiny
+  embedder: swin_tiny_patch4_window7_224
+  latent_dims: 12544
+
+batch_size: 32
+epoch: 1
+learning_rate: 0.0001
+weight_decay: 0.0001
+num_classes: 2
+img_size: 224
+min_val_loss: 10000
